# tf2-scanner

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  globals.cpp  globals.hpp  main.cpp  pubspec.yaml  release.lnk
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/bpscanner/: MainActivity.kt
components/: ApiKeyPrompt.cpp  ApiKeyPrompt.hpp  Console.cpp  Console.hpp  InfoCard.cpp  InfoCard.hpp  LoadingScreen.cpp  LoadingScreen.hpp  MainBody.cpp  MainBody.hpp  Overlay.cpp  Overlay.hpp  SideBar.cpp  SideBar.hpp  StatsInfo.cpp  StatsInfo.hpp  TopBar.cpp  TopBar.hpp
fonts/: MaterialIcons.cpp  Roboto.cpp
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
json_schemas/: BptfPrices.hpp  Effects.hpp  GithubReleases.hpp  GithubVersion.hpp  InventoryData.hpp  ItemSchema.hpp  MarketPrices.hpp  PlayerData.hpp  Prices.hpp  Schema.hpp  Skins.hpp  SteamGames.hpp  SteamInventory.hpp  SteamLevel.hpp  SteamPlayer.hpp  TFEffects.hpp  TFMarket.hpp  TfSkins.hpp  UserGames.hpp  UserLevel.hpp
lib/: config.dart  globals.dart  inventory.dart  item.dart  locator.dart  logic.dart  main.dart  navigation.dart  router.dart  scanInfo.dart  scanner.dart  scanning.dart  settings.dart  unfocuser.dart  user.dart  utilities.dart  widgets.dart
lib/screens/: appSettings.dart  home.dart  options.dart  popup.dart  scanSettings.dart
lib/types/: Bptf.dart  GetPlayerSummaries.dart  effects.dart  inventory.dart  itemSchema.dart  skins.dart
lib/widgets/: appbar.dart  buttons.dart  delegateWithFixedHeight.dart  listInput.dart  loadingCard.dart  misc.dart  scanSettingsInput.dart  scanStatus.dart  settingsList.dart  sidebar.dart  switchInput.dart  textInput.dart  userContainer.dart
resources/: bpscanner.rc  bpscannerIcon.hpp
scanning/: Config.cpp  Config.hpp  Inventory.cpp  Inventory.hpp  Item.cpp  Item.hpp  Player.cpp  Player.hpp  Scanner.cpp  Scanner.hpp  user.cpp  user.hpp
test/: widget_test.dart
utilities/: Animation.cpp  Animation.hpp  Texture.cpp  Texture.hpp
web/: index.html  manifest.json
windows/: AppConfiguration.props  CMakeLists.txt  Runner.vcxproj
windows/runner/: Runner.rc  main.cpp  window_configuration.cpp
